<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="xyz.phyoekhant.padc2_week1_implicit_intent.HomeActivity">

    <Button
        android:id="@+id/btn_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_share" />

    <Button
        android:id="@+id/btn_map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_map" />

    <Button
        android:id="@+id/btn_phonecall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_phonecall" />

    <Button
        android:id="@+id/btn_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_email" />

    <Button
        android:id="@+id/btn_taking_pic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_taking_pic" />

    <Button
        android:id="@+id/btn_choose_pic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_choose_pic" />

</LinearLayout>
